# DRD

./: .gitignore  README.md  alexnet.py  custom_layers.py  deep_model.py  load_dataset.py  model.py  model2.py  nourinet.py  predict.py  requirements.txt  train.py  utils.py  vggnet.py  visualizations.py
analisys/: Analysis.ipynb  misc.ipynb
preprocessing/: CMakeLists.txt  resize.sh
preprocessing/blobs_patch_extraction/: extract.py
preprocessing/clahe/: clahe.py
preprocessing/derivatives_detector/: derivatives.cpp  run_proposal_generator.sh
preprocessing/iputils/: derivatives.cpp  derivatives.hpp  lcn.cpp  lcn.hpp  nonmaxsup.cpp  nonmaxsup.hpp  trim.cpp  trim.hpp
preprocessing/lcn/: lcn.cpp  run_lcn.sh
preprocessing/trimmer/: readme.txt  run_trimmer.sh  trimmer.cpp
slides/: 1_intro.tex  2_2_ma_detection.tex  2_solution.tex  3_conclusions.tex  4_winners_approaches.tex  citations.bib  main.tex  slides.tex
